<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="fill"
    android:orientation="vertical">

    <TextView

        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="17.5sp" />

    <TextView
        android:id="@+id/nname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="17.5sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hname"

        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/eemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yemail"
        android:textSize="17.5sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"

        android:textSize="20sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/yypicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic"
        android:textSize="17.5sp" />

    <ImageButton
        android:id="@+id/ypicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Button1"
        android:src="@android:drawable/picture_frame" />

    <TextView

        android:id="@+id/click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click"

        android:textSize="15sp" />


</LinearLayout>